tests/baselines/reference/iterableArrayPattern28.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(2,32): error TS2345: Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'ReadonlyArray<[string, number]>'.
  Types of property 'concat' are incompatible.
    Type '{ (...items: ConcatArray<[string, number] | [string, boolean]>[]): ([string, number] | [string, boolean])[]; (...items: ([string, number] | [string, boolean] | ConcatArray<[string, number] | [string, boolean]>)[]): ([string, number] | [string, boolean])[]; }' is not assignable to type '{ (...items: ConcatArray<[string, number]>[]): [string, number][]; (...items: ([string, number] | ConcatArray<[string, number]>)[]): [string, number][]; }'.
      Type '([string, number] | [string, boolean])[]' is not assignable to type '[string, number][]'.
        Type '[string, number] | [string, boolean]' is not assignable to type '[string, number]'.
          Type '[string, boolean]' is not assignable to type '[string, number]'.
            Type 'boolean' is not assignable to type 'number'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'ReadonlyArray<[string, number]>'.
!!! error TS2345:   Types of property 'concat' are incompatible.
!!! error TS2345:     Type '{ (...items: ConcatArray<[string, number] | [string, boolean]>[]): ([string, number] | [string, boolean])[]; (...items: ([string, number] | [string, boolean] | ConcatArray<[string, number] | [string, boolean]>)[]): ([string, number] | [string, boolean])[]; }' is not assignable to type '{ (...items: ConcatArray<[string, number]>[]): [string, number][]; (...items: ([string, number] | ConcatArray<[string, number]>)[]): [string, number][]; }'.
!!! error TS2345:       Type '([string, number] | [string, boolean])[]' is not assignable to type '[string, number][]'.
!!! error TS2345:         Type '[string, number] | [string, boolean]' is not assignable to type '[string, number]'.
!!! error TS2345:           Type '[string, boolean]' is not assignable to type '[string, number]'.
!!! error TS2345:             Type 'boolean' is not assignable to type 'number'.